--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,13 @@
   width: 600px;
 }
 
+.just-text {
+  color: burlywood;
+  font-weight: bold;
+  text-align: center;
+}
+
+.g { 
+  text-align: center;
+}
 
